--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.17",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-svg": "12.3.0",
     "shared-models": "workspace:*"
   },
   "devDependencies": {
@@ -21,6 +25,7 @@
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.3",
     "@types/react-test-renderer": "^18.0.0",
+    "babel-preset-expo": "^9.2.0",
     "typescript": "^4.8.3"
   },
   "private": true
