--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "shared-ui-views": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
