--- a/packages/shared-views/package.json
+++ b/packages/shared-views/package.json
@@ -17,6 +17,7 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-scripts": "5.0.1",
+    "shared-models": "workspace:*",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
