--- a/apps/web-apps/package.json
+++ b/apps/web-apps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared-views",
+  "name": "web-apps",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.63",
+    "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "native-base": "^3.4.17",
@@ -17,7 +17,6 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-scripts": "5.0.1",
-    "shared-models": "workspace:*",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
   }
 }
